# cell

./: .gitignore  BENCHMARK_RESULTS.md  CHANGES.md  DARK_MANIFOLD_FINDINGS.md  DMVC_Colab.ipynb  FUTURE_WORK.md  MANIFEST.md  NEXT_SESSION.md  NOTEBOOK_UPGRADE.md  NOTES_P12_null.md  NOTES_P14_null.md  NOTES_P15_null.md  PROJECT_STATUS.md  README.md  RESULTS.md  colab_setup.ipynb  prototype_p0.py  prototype_p1.py  prototype_p10_learned_spatial.py  prototype_p11_neural_pde.py  prototype_p12_gauge.py  prototype_p13_unitary.py  prototype_p14_memory.py  prototype_p15_rule_discovery.py  prototype_p2_syn3a.py  prototype_p2b_rebalance.py  prototype_p3_compartments.py  prototype_p3b_stamps.py  prototype_p4_kinetics.py  prototype_p4b_kinetics_coupled.py  prototype_p5_boundary.py  prototype_p6_physiological.py  prototype_p7_learned_rates.py  prototype_p7b_tuned.py  prototype_p8_perm_invariant.py  prototype_p8b_full_syn3a.py  prototype_p8c_scaled.py  prototype_p8d_diagnostic.py  prototype_p8e_stable.py  prototype_p9_lsoda.py  (+1 more)
cell_sim/: .gitignore  BATCH1_MANIFEST.txt  BATCH2_MANIFEST.txt  README.md  cell_sim_colab.ipynb  patch_raise_clamp.py  requirements.txt  setup.sh
cell_sim_rust/: Cargo.toml  pyproject.toml
cell_sim_rust/src/: lib.rs
docs/: KNOCKOUT_TEST_GUIDE.md  PHASE1_RESULTS.md  PHASE2_RESULTS.md  PHASE3_RESULTS.md  PHASE4_UPTAKE_NOTES.md
figures/: README.md
memory_bank/: README.md
notebooks/: README.md  bench_esm2_session19.ipynb  colab_bc_sweep.ipynb  colab_v9_run.ipynb  curate_multiorg_session20.ipynb  embed_multiorg_session20.ipynb  populate_tier1_cache.ipynb  (+4 more)
(+336 files in other folders)
