[package]
name = "cell_sim_rust"
version = "0.1.0"
edition = "2021"
authors = ["Chhillar (Nikku03) <research@localhost>"]
description = "Rust hot-path for cell_sim FastEventSimulator"
license = "MIT"

[lib]
name = "cell_sim_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
